; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_vt.c_poke_blanked_console.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_vt.c_poke_blanked_console.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }

@console_timer = common dso_local global i32 0, align 4
@blank_timer_expired = common dso_local global i64 0, align 8
@ignore_poke = common dso_local global i64 0, align 8
@vc_cons = common dso_local global %struct.TYPE_4__* null, align 8
@fg_console = common dso_local global i64 0, align 8
@KD_GRAPHICS = common dso_local global i64 0, align 8
@console_blanked = common dso_local global i64 0, align 8
@blankinterval = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i32 0, align 4
@blank_normal_wait = common dso_local global i32 0, align 4
@blank_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @poke_blanked_console() #0 {
  %1 = call i32 (...) @WARN_CONSOLE_UNLOCKED()
  %2 = call i32 (...) @might_sleep()
  %3 = call i32 @del_timer(i32* @console_timer)
  store i64 0, i64* @blank_timer_expired, align 8
  %4 = load i64, i64* @ignore_poke, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %23, label %6

6:                                                ; preds = %0
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @vc_cons, align 8
  %8 = load i64, i64* @fg_console, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = icmp ne %struct.TYPE_3__* %11, null
  br i1 %12, label %13, label %23

13:                                               ; preds = %6
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** @vc_cons, align 8
  %15 = load i64, i64* @fg_console, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @KD_GRAPHICS, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %13, %6, %0
  br label %42

24:                                               ; preds = %13
  %25 = load i64, i64* @console_blanked, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %24
  %28 = call i32 (...) @unblank_screen()
  br label %42

29:                                               ; preds = %24
  %30 = load i32, i32* @blankinterval, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %41

32:                                               ; preds = %29
  %33 = load i64, i64* @jiffies, align 8
  %34 = load i32, i32* @blankinterval, align 4
  %35 = load i32, i32* @HZ, align 4
  %36 = mul nsw i32 %34, %35
  %37 = sext i32 %36 to i64
  %38 = add nsw i64 %33, %37
  %39 = call i32 @mod_timer(i32* @console_timer, i64 %38)
  %40 = load i32, i32* @blank_normal_wait, align 4
  store i32 %40, i32* @blank_state, align 4
  br label %41

41:                                               ; preds = %32, %29
  br label %42

42:                                               ; preds = %23, %41, %27
  ret void
}

declare dso_local i32 @WARN_CONSOLE_UNLOCKED(...) #1

declare dso_local i32 @might_sleep(...) #1

declare dso_local i32 @del_timer(i32*) #1

declare dso_local i32 @unblank_screen(...) #1

declare dso_local i32 @mod_timer(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
